# boosted-lorenzetti

./: .gitignore  Dockerfile  README.md  adjust_names.py  adjust_number.py  analayze_kfold.ipynb  analyze-ntuple.ipynb  analyze_aod.ipynb  analyze_duckdb_aod.ipynb  analyze_event.ipynb  analyze_kfold.ipynb  analyze_ntuple.ipynb  analyze_training.ipynb  bin_data_in_et_eta.py  check_dataset.ipynb  cli.py  cluster_profile.ipynb  compare_models.ipynb  convert_npz.ipynb  dataset_validation.ipynb  docker-compose.yml  esd_to_aod.ipynb  esd_to_aod.py  fit_cnn.py  fit_mlp.py  kfold_comparison.ipynb  kfold_evaluation.ipynb  lzt_to_parquet.ipynb  merge_pileup_files.py  plot_roi_cells.ipynb  production_profile.ipynb  profile_dataset.ipynb  profile_dataset.py  profiles.ipynb  pyproject.toml  requirements.txt  ring_profiles.ipynb  rings_profile.ipynb
boosted_lorenzetti/: __init__.py  binary_classification.py  callbacks.py  calo_cluster.py  config.py  constants.py  convert.py  cross_validation.py  data.py  dataset.py  detector.py  formulas.py  jobs.py  log.py  metrics.py  mlflow.py  norms.py  root.py  types.py  utils.py
datasets/: 2024_08_14_08_41_0000000000_lorenzetti_gg2H2ZZ2ee.sh  2024_08_19_10_41_0000000000_lorenzetti_gg2H2ZZ2ee.sh  2024_08_19_21_08_0000000000_zee.sh  2024_08_19_21_18_0000000000_single_electron.sh  2024_08_20_21_08_0000000000_zee.sh  2024_08_22_12_00_0000000000_minibias.sh  2024_09_17_08_00_0000000000_minibias.sh  2024_11_19_18_53_0000000000_jets.sh  2024_11_21_07_00_0000000000_zee_w_pileup  2024_11_21_07_00_0000000000_zee_w_pileup.sh  README.md  (+5 more)
(+112 files in other folders)
