[project]
name = "boosted-lorenzetti"
version = "0.1.0"
description = "Repository for boosted analysis with Lorenzetti Shower Simulator"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
norecursedirs = [
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "docs/_build",
    "__pycache__",
    ".git"
]
python_files = [
    "test_*.py"
]
testpaths = [
    "tests"
]
pythonpath = [
    "."
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(name)s - %(module)s - %(lineno)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
